--- a/src/app/home/navbar/navbar.component.css
+++ b/src/app/home/navbar/navbar.component.css
@@ -59,6 +59,7 @@ button:hover {
     margin-top: 40px;
     display: flex;
     align-items: center;
+    padding-right: 71px;
 }
 
 .social-links img {
@@ -76,6 +77,7 @@ button:hover {
 
 .social-links a + a {
     margin-left: 32px;
+    padding-right: 71px;
 }
 
 .social-links a:hover {
@@ -108,6 +110,7 @@ button:hover {
 
     button + button {
         padding-top: 10px;
+        padding-right: 71px;
     }
 
     .social-links,
